crates/skribble_css/src/snapshots/skribble_css__generate_css__tests__media_queries_css_variables.snap
---
source: crates/skribble_css/src/generate_css.rs
assertion_line: 326
expression: output

---
:root {
  --color-text-media: rgba(113, 113, 122, var(--text-opacity));
}

@media print {
  :root {
    --color-text-media: rgba(24, 24, 27, var(--text-opacity));
  }

  .print\:text\:\:\$media {
    --text-opacity: 1;
    color: var(--color-text-media);
  }
}
